Archive2/4f/5cdbed5d470b5e/output
main.cpp: In function 'int main()':
main.cpp:20:8: warning: variable 'x' set but not used [-Wunused-but-set-variable]
   auto x = func (123);
        ^
main.cpp: In instantiation of 'bool cond(T) [with T = int]':
main.cpp:14:33:   required from here
main.cpp:10:3: error: static assertion failed: !!
   static_assert (T {}, "!!");
   ^

==========


main.cpp:20:8: warning: unused variable 'x' [-Wunused-variable]
  auto x = func (123);
       ^
1 warning generated.
